--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "morgan": "~1.9.1",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "redis": "^4.6.11"
   }
 }
